--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --watch --no-cache --config ./test/jest-e2e.json",
+    "test:e2e": "npm run db:test:restart && DB_PORT=5435 jest --no-cache --config ./test/jest-e2e.json",
     "orm:migrate": "npm run build && typeorm migration:run -d ./dist/src/data.source.js",
     "db:dev:up": "docker compose up dev-db -d",
     "db:dev:rm": "docker compose rm dev-db -s -f -v",
